--- a/layout/index.html
+++ b/layout/index.html
@@ -39,6 +39,8 @@
     </style>
   </head>
   <body>
+    <div class="container-lg min-vh-100 bg-info"></div>
+
     <div class="hero">
       <div class="container-fluid">
         <div class="row">
@@ -77,6 +79,24 @@
         </div>
       </div>
     </div>
+
+    <div class="container border border-danger border-4">
+  <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4">
+    <div class="col bg-info border border-warning border-4">Column</div>
+    <div class="col bg-primary">Column</div>
+    <div class="col bg-success">Column</div>
+    <div class="col bg-danger">Column</div>
+  </div>
+</div>
+      </div>
+    </div>
+
+    <div class="col-3 bg-danger p-3 border">
+  .col-3: width of 25%
+</div>
+<div class="col-sm-9 bg-warning p-3 border">
+  .col-sm-9: width of 75% above sm breakpoint
+</div>
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper.js -->
